Sonar code style fix ups